2010-12-09  Christopher Bratusek <zanghar@freenet.de>
	* configure.in
	* lisp/sawfish/cfg/Makefile.in: fix installation for non-root-users by
	not hardcoding /usr for icons and kde4-prefix [Stefano Sabatini]

	* lisp/sawfish/wm/edge/actions.jl
	* lisp/sawfish/wm/edge/viewport-drag.jl
	* lisp/sawfish/wm/edge/hot-spots.jl
	* lisp/sawfish/wm/edge/flip.jl: renamed functions and variables so that
	they are easier to understand (activate/call/init confusion is gone now)
	- options none and hot-spot merged together (none/hot-spot)
	- code-cleanup in hot-spots
	- corrected copyright header of viewport-drag
	- some doc / indention fixes 
	-- Teika Kazura

2010-11-27  Teika kazura <teika@lavabit.com>
	* lisp/sawfish/wm/commands.jl
	* man/news.texi: Minor bugfix of interactive "call-command".
	It used to print an error message when you cancel an interactive
	call of `call-command' with the escape key, but it doesn't any
	more.

	* OPTIONS
	* lisp/sawfish/wm/commands.jl
	* lisp/sawfish/wm/util/nokogiri.jl
	* man/news.texi
	* man/sawfish.texi: New function `report-commands'.

	* man/sawfish.texi: Revised "commands" section a bit.

	* lisp/sawfish/wm/commands.jl
	* man/news.texi
	* man/sawfish.texi
	* sawfish.el: Dropped two outdated featuers in command definition.
	Function 'define-command-args' is deleted. In 'define-command',
	'doc-key' arg is dropped.

2010-11-20  Christopher Bratusek <zanghar@freent.de>
	* lisp/sawfish/wm.jl: load & export edge-actions from here

	* lisp/sawfish/wm/user.jl: init flippers from here automatically

	* lisp/sawfish/wm/edge/hot-spots.jl: improved fallback values for
	actions (no error messages with latest edge-actions)

	* lisp/sawfish/wm/edge/actions.jl: removed edge-actions-enabled option
					   simplified the code a bit
					   combined actions for left & right edge
					   combined actions for top & bottom edge
					   also delay Hot-Spots for corners
					   string-change for delay option
					   changed in the action delay: