@@ -1,3 +1,11 @@
+2010-12-18  Christopher Bratusek <zanghar@freenet.de>
+	* lisp/sawfish/wm/tabs/tabgroup.jl: fixed a regression that made all
+	windows in the group {un,}sticky when one became [fuchur]
+
+2010-12-17  Christopher Bratusek <zanghar@freenet.de>
+	* debian/control.in: make debian packaging scripts compatible with
+	Debian/Experimental
+
 2010-12-09  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in
 	* lisp/sawfish/cfg/Makefile.in: fix installation for non-root-users by
